--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
-<h2>Hello world!</h2>
-<p>This is my first web app!</p>
+<html>
+	<head>
+		<title>Hello</title>
+	</head>
+	<body>
+		<h2>Hello world!</h2>
+		<p>This is my first web app!</p>
+	</body>
+</html>
