--- a/WebRoot/index.html
+++ b/WebRoot/index.html
@@ -5,5 +5,6 @@
 	<body>
 		<h2>Hello world!</h2>
 		<p>This is my first web app!</p>
+		<p>Go to jsp page: <a href="test.jsp">test.jsp</a></p>
 	</body>
 </html>
