--- a/WebRoot/index.html
+++ b/WebRoot/index.html
@@ -6,5 +6,8 @@
 		<h2>Hello world!</h2>
 		<p>This is my first web app!</p>
 		<p>Go to jsp page: <a href="test.jsp">test.jsp</a></p>
+		<p>=============================================</p>
+		<p>Please input you name: <input type="text" name="a" id="a"/></p>
+		<p>go to servlet: <a href="javascript:location='test.do?a='+document.getElementById('a').value">test.do</a></p>
 	</body>
 </html>
