--- a/WebRoot/index.html
+++ b/WebRoot/index.html
@@ -9,5 +9,7 @@
 		<p>=============================================</p>
 		<p>Please input you name: <input type="text" name="a" id="a"/></p>
 		<p>go to servlet: <a href="javascript:location='test.do?a='+document.getElementById('a').value">test.do</a></p>
+		<p>=============================================</p>
+		<p>go to servlet: <a href="user-list.do">user-list.do</a></p>
 	</body>
 </html>
